--- a/infra/prod.configmap.yaml
+++ b/infra/prod.configmap.yaml
@@ -3,6 +3,8 @@ kind: ConfigMap
 metadata:
   name: botconfig
 data:
-  LOG_LEVEL: "info"
-  TELEGRAM_USERNAME: nunca_lo_usamos
   APP_MODE: production
+  LOG_LEVEL: info
+  LOG_URL: CAMBIAR
+  TELEGRAM_TOKEN: CAMBIAR
+  TELEGRAM_USERNAME: CAMBIAR
