--- a/infra/secret.sample.yaml
+++ b/infra/secret.sample.yaml
@@ -4,6 +4,6 @@ metadata:
   name: botsecret
 type: Opaque
 stringData:
-  TELEGRAM_USERNAME: bWVtbzJOZWdyb1Rlc3RCb3QKfranco@franco-Satellite-P55W-C
-  TELEGRAM_TOKEN: NzcxMjc0MTA0MDpBQUV2TXRfamdaT2NjRFhrN3NpMlNIQXVtZ3ZZdGZhNFlCWQo=
-  LOG_URL: aHR0cHM6Ly9lbmRwb2ludDQuY29sbGVjdGlvbi5zdW1vbG9naWMuY29tL3JlY2VpdmVyL3YxL2h0dHAvWmFWbkM0ZGhhVjBHOTFUeXo5c3EzR2txcVhSZ19FNFRETXljYWJNT01WbzktWWh2Q0kyRjVwVmpPXzFxTE4tR09yTmpqT1loc19NWUVNckF4aVo2cEd0b29OWXg3LWJfTUVITU9fV3FRQ0ZlMml2a0E3MUVkZz09Cg==
+  TELEGRAM_USERNAME: <TELEGRAM_USERNAME>
+  TELEGRAM_TOKEN: <TELEGRAM_TOKEN>
+  LOG_URL: <LOG_URL>
