infra: ajuste en secrets

--- a/infra/deployment.yaml
+++ b/infra/deployment.yaml
@@ -23,6 +23,8 @@ spec:
         envFrom:
           - configMapRef:
               name: botconfig
+          - secretRef:
+              name: botsecret
         resources:
           requests:
             memory: "64Mi"
