--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ LOG_LEVEL=<trace|debug|info|warn|error|fatal>
 LOG_URL=<SUMOLOGIC_HTTPS_ENDPOINT>
 TELEGRAM_TOKEN=<YOUR_TELEGRAM_TOKEN>
 TELEGRAM_USERNAME=<YOUR_TELEGRAM_USERNAME>
+API_URL=<API_URL>
+API_KEY=<API_KEY>
