--- a/infra/secret.sample.yaml
+++ b/infra/secret.sample.yaml
@@ -7,3 +7,5 @@ stringData:
   TELEGRAM_USERNAME: <TELEGRAM_USERNAME>
   TELEGRAM_TOKEN: <TELEGRAM_TOKEN>
   LOG_URL: <LOG_URL>
+  API_URL: <API_URL>
+  API_KEY: <API_KEY>
